--- a/portfolio/tamplate/index.html
+++ b/portfolio/tamplate/index.html
@@ -92,7 +92,7 @@
             <h2 class="mb-"></h2>
             <div class="row">
                 <div class="col-md-6" >
-                    <img  class="rounded-circle" style="height: 300px; width: 400px;" src="static/image/fundo-futurista-de-tecnologia-gradiente_23-2149122416.avif alt="" class="img-fluid rounded img_sobre">
+                    <img  class="rounded-circle" style="height: 300px; width: 400px;" src="/image/fundo-futurista-de-tecnologia-gradiente_23-2149122416.avif alt="" class="img-fluid rounded img_sobre">
                 </div>
                 <div class="col-md-6">
                     <h2>Sobre Mim</h2><br>
@@ -125,7 +125,7 @@
             <div class="cont_3">
                 <div class="col-5">
                     <div class="card project-card">
-                        <img src="static/image/easyscrumlogo.jpg" class="card-img-top" alt="Projeto 1">
+                        <img src="/image/easyscrumlogo.jpg" class="card-img-top" alt="Projeto 1">
                         <div class="card-body">
                             <h5 class="card-title">Projeto Easy Scrum</h5>
                             <p class="card-text"></p>
