expanssão git commit -m expanssão

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center" >
-                    <img  style="height: 400px; width: 320px;" src="/portfolio/IMG_20240129_114612_029.webp" class="img-fluid rounded img_sobre r-circle">
+                    <img  style="height: 400px; width: 320px;" src="/IMG_20240129_114612_029.webp" class="img-fluid rounded img_sobre r-circle">
                 </div>
                 <div class="col-md-6 text-light">
                     <h2>Sobre Mim</h2><br>
@@ -99,7 +99,7 @@
                 <div class="text-center col-md-6">
                 <span class="form-control border-dark-subtle bg-dark text-light"><h2 class="mb-4">Currículo</h2>
                 <h6>Sou novo nessa área,mas possuo experiências que possam contribuir para um eventual projeto como,atendimento ao cliente. <br> Veja o Meu Currículo!</h6>
-                <a href="/portfolio/Currículo_Rafael.docx" class="btn btn-outline-light">Currículo</a></span>
+                <a href="/Currículo_Rafael.docx" class="btn btn-outline-light">Currículo</a></span>
                 </div>
                 <div class="col-md"></div>
             </div>
@@ -134,11 +134,11 @@
                 <h1 class="text-center text-light py-1">Certificações</h1>
                 <div class="col-md-6 text-center py-5">
                  <span class="form-control bg-dark py-3"><h3 class="text-light py-5 text-center">Certificado Sebrae - QAC</h3>
-                 <a href="/portfolio/Sebrae - QAC.pdf" class="btn btn-outline-light ">Ver certificado</a></span>
+                 <a href="/Sebrae - QAC.pdf" class="btn btn-outline-light ">Ver certificado</a></span>
                 </div> 
                 <div class="col-md-6 text-center py-5">
                    <span class="form-control bg-dark py-3"><h3 class="text-light py-5 text-center"> Certificado Cisco - NDG Linux Unhatched </h3>
-                    <a href="/portfolio/RafaelCandido-NDG Linux Unhatc-certificate (1).pdf" class="btn btn-outline-light">Ver certificado</a></span>
+                    <a href="/RafaelCandido-NDG Linux Unhatc-certificate (1).pdf" class="btn btn-outline-light">Ver certificado</a></span>
                 </div>
             </div>
         </div>
@@ -151,7 +151,7 @@
                 <div class="col-md"></div>
                 <div class="col-md-4">
                     <div class="card project-card ">
-                        <img src="/portfolio/easyscrumlogo.jpg" class="card-img-top" alt="Projeto 1">
+                        <img src="/easyscrumlogo.jpg" class="card-img-top" alt="Projeto 1">
                         <div class="card-body">
                             <h5 class="card-title text">Projeto Easy Scrum</h5>
                             <p class="card-text"></p>
@@ -173,16 +173,16 @@
                 <h1 class="text-light">Contatos  </h1>
                 <div class="py-4"></div>
                 <div class="col-md">
-                    <i class="bi bi-github fs-1 text-bg-dark" href=""></i>
+                <a href="https://github.com/Rafa2-bit"> <i class="bi bi-github fs-1 text-bg-dark"></i></a>
                 </div>
                 <div class="col-md-3">
-                    <i class="bi bi-linkedin fs-1 text-bg-dark"></i>
+                   <a href="https://www.linkedin.com/in/rafael-candido-155705317?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin fs-1 text-bg-dark"></i></a>
                 </div>
                 <div class="col-md-3">
-                    <i class="bi bi-envelope-at text-bg-dark fs-1"></i>
+                    <a href="faelbc10@gmail.com"><i class="bi bi-envelope-at text-bg-dark fs-1"></i></a>
                 </div>
                 <div class="col-md">
-                    <i class="bi bi-instagram text-bg-dark fs-1"></i>
+                    <a href="https://www.instagram.com/faels0_0/"><i class="bi bi-instagram text-bg-dark fs-1"></i></a>
                 </div>
            </div>
         </div>
