--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 </head>
 <body class="bg-dark container-fluid border-0 m-0 p-0 border-0">
 
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark nav_links">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top nav_links">
         <div class="container nav_links ">
           <a class="navbar-brand" href="#hero">Portifolío Rafael Barbosa</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto nav_links">
               <li class="nav-item">
                 <div class="dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Tópicos</a>
+                    <a href="#navbarNav" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Tópicos</a>
                     <ul class="dropdown-menu">
                         <li><a href="#Sobre" class="dropdown-item">Sobre Mim</a></li>
                         <li><a href="#Curriculo" class="dropdown-item">Currículo</a></li>
@@ -63,7 +63,7 @@
       </nav>
       
       <br><br>
-
+ 
     <header>
     <section class="hero bg-gradient text-center" id="hero">
         <div class="container" style="padding: 60px ;">
