--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center" >
-                    <img  style="height: 400px; width: 320px;" src="/IMG_20240129_114612_029.webp" class="img-fluid rounded img_sobre r-circle">
+                    <img  style="height: 400px; width: 320px; object-fit: cover;" src="/IMG_20240129_114612_029.webp" class="img-fluid rounded img_sobre r-circle">
                 </div>
                 <div class="col-md-6 text-light">
                     <h2>Sobre Mim</h2><br>
