ajuste de imagem

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center" >
-                    <img  style="height: 400px; width: 320px; object-fit: cover;" src="/IMG_20240129_114612_029.webp" class="img-fluid rounded img_sobre r-circle">
+                    <img  style="height: 400px; width: 320px; object-fit: cover;" src="/20241216_124220.jpg" class="img-fluid rounded img_sobre r-circle">
                 </div>
                 <div class="col-md-6 text-light">
                     <h2>Sobre Mim</h2><br>
-                    <p>Me chamo Rafael Barbosa Candido,tenho 20 anos,nasci e cresci na cidade de São José dos Campos,SP,Brasil. Sou estudante de Análise e Desenvolvimento de Sistemas na Fatec-Jessen Vidal,em SJC.</p>
-                    <p>Sou uma pessoa apaixonada por tecnologia desde criança e sempre me interessei pela área de TI,principalmente na área de programação. O que me despertou esse interesse,foi quando,ainda criança,me fazia a pergunta:"Como essas coisas realmente funcionam?". Desde então eu venho cada vez mais estudando e me atualizando em programação e finalmente desenvolver os meus próprios projetos.</p>
-                    <p>Cada vez mais que me aprofundo na área,mais me interesso e cada vez mais sinto essa fome de participar de novos desafios e projetos.</p>
+                    <p>Me chamo Rafael Barbosa Candido, tenho 20 anos, nasci e cresci na cidade de São José dos Campos, SP, Brasil. Sou estudante de Análise e Desenvolvimento de Sistemas na Fatec-Jessen Vidal, em SJC.</p>
+                    <p>Sou uma pessoa apaixonada por tecnologia desde criança e sempre me interessei pela área de TI, principalmente na área de programação. O que me despertou esse interesse, foi quando, ainda criança, me fazia a pergunta:"Como essas coisas realmente funcionam?". Desde então eu venho cada vez mais estudando e me atualizando em programação e finalmente desenvolver os meus próprios projetos.</p>
+                    <p>Cada vez mais que me aprofundo na área, mais me interesso e cada vez mais sinto essa fome de participar de novos desafios e projetos.</p>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                 <div class="col-md"></div>
                 <div class="text-center col-md-6">
                 <span class="form-control border-dark-subtle bg-dark text-light"><h2 class="mb-4">Currículo</h2>
-                <h6>Sou novo nessa área,mas possuo experiências que possam contribuir para um eventual projeto como,atendimento ao cliente. <br> Veja o Meu Currículo!</h6>
+                <h6>Sou novo nessa área, mas possuo experiências que possam contribuir para um eventual projeto como, atendimento ao cliente. <br> Veja o Meu Currículo!</h6>
                 <a href="/Currículo_Rafael.docx" class="btn btn-outline-light">Currículo</a></span>
                 </div>
                 <div class="col-md"></div>
