ajuste de contatos

--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
                    <a href="https://www.linkedin.com/in/rafael-candido-155705317?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin fs-1 text-bg-dark"></i></a>
                 </div>
                 <div class="col-md-3">
-                    <a href="faelbc10@gmail.com"><i class="bi bi-envelope-at text-bg-dark fs-1"></i></a>
+                    <a href="https://wa.me/5512996418192"><i class="bi bi-whatsapp text-bg-dark fs-1"></i></a>
                 </div>
                 <div class="col-md">
-                    <a href="https://www.instagram.com/faels0_0/"><i class="bi bi-instagram text-bg-dark fs-1"></i></a>
+                    <a href="https://www.instagram.com/faels0_0"><i class="bi bi-instagram text-bg-dark fs-1"></i></a>
                 </div>
            </div>
         </div>
